--- a/users/templates/registration/base.html
+++ b/users/templates/registration/base.html
@@ -16,7 +16,10 @@
 
   {% block styles %}
     {% bootstrap_css %}
-  <link rel="stylesheet" href="{%static 'css/auth.css'%}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Material Design Bootstrap -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{%static 'css/auth.css'%}">
 
   {% endblock %}
 
