--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,16 @@
 body{
-  background-color: #f4f7f6;
+  font-family: "Nunito Sans",Arial,sans-serif;
+  background: #fff;
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: 400;
+}
+.hood-watch{
+  position:relative;
+  background-image: url("../img/bg_1.jpg");
+  background-position: 50% 0%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  min-height: 100vh;
 }
