--- a/hood/templates/base.html
+++ b/hood/templates/base.html
@@ -14,7 +14,7 @@
   {%block title%}
   {%endblock%}
  
-  <link rel="icon" href="https://assets.awwwards.com/assets/images/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" href="{%static 'favicon/houses.png'%}" type="img/jpg">
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!-- Font Awesome -->
