--- a/hood/templates/home.html
+++ b/hood/templates/home.html
@@ -1,10 +1,11 @@
 {%extends 'base.html'%}
+{% load static %}
 {%block content%}
 <div class="container">
   {%if request.user.profile.neighbourhood%}
   <h2>YOU HAVE A HOOD</h2>
   {%else%}
-  <div class="container join-hood" style="margin-top:10%">
+  <div class="container  join-hood" style="margin-top:10%">
     <div class="row no-gutters slider-text justify-content-center align-items-center">
       <div class="col-lg-8 col-md-6 d-flex align-items-end fadeInUp">
         <div class="text text-center">
@@ -16,7 +17,44 @@
     </div>
   </div>
 
-  
+  <div class="modal fade" id="hoodsModal" tabindex="-1" role="dialog" aria-labelledby="hoodsLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Join Neighbourhood</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="list-group-flush">
+            {%if hoods%}
+              {%for hood in hoods%}
+              <div class="list-group-item">
+                <p class="mb-0">
+                  {%if hood.hood_photo.cdn_url%}
+                    <img src="{{hood.hood_photo.cdn_url}}" class="rz-depth-0 mr-4" alt="avatar image" height="35">
+                  {%else%}
+                    <img src="{%static 'img/houses.png'%}" class="z-depth-0 mr-4" alt="avatar image" height="35">
+                  {%endif%}
+                  {{hood.hood_name}}
+                  <button class="btn aqua-gradient float-right ml-auto">Join</button>
+                </p>
+              </div>
+              {%endfor%}
+            {%else%}
+            <div class="list-group-item">
+              <p class="mb-0">No available registered neighbourhoods at the moment</p>
+            </div>
+            {%endif%}
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
   {%endif%}
 </div>
 
