--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -27,7 +27,7 @@
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="fas fa-hospital"></i>E-Services
+        <a class="nav-link" href="{%url 'e_services'%}"><i class="fas fa-hospital"></i>E-Services
         </a>
       </li>
       <li class="nav-item ">
