Create hood bs view function

--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -31,7 +31,7 @@
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="fas fa-briefcase"></i>Businesses
+        <a class="nav-link" href="{%url 'hood_bs'%}"><i class="fas fa-briefcase"></i>Businesses
         </a>
       </li>
       <li class="nav-item ">
