Create hood posts html template

--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -35,7 +35,7 @@
         </a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href=""><i class="far fa-comments"></i>Forum
+        <a class="nav-link" href="{%url 'hood_posts'%}"><i class="far fa-comments"></i>Forum
         </a>
       </li>
       <li class="nav-item ">
