--- a/hood/templates/hood_businesses.html
+++ b/hood/templates/hood_businesses.html
@@ -9,16 +9,14 @@
 <link rel="stylesheet" href="{% static 'css/bs.css' %}">
 {%endblock%}
 {%block content%}
-<div class="container" >
-  <div class="row text-center">
-    <div class="col-6 mx-auto">
-      <div class="card-counter info">
-        <i class="fas fa-briefcase"></i>
-        <span class="count-numbers">{{bss|length}}</span>
-        <span class="count-name">Business(es)</span>
-      </div>
+<div class="container" style="padding-top: 5vh;">
+  <div class="mx-auto mb-3 col-md-6">
+    <div class="card border-info mx-sm-1 p-3">
+        <div class="card border-info shadow text-info p-3 my-card" ><i class="fas fa-briefcase"></i></div>
+        <div class="text-info text-center mt-3"><h4>Businesses</h4></div>
+        <div class="text-info text-center mt-2"><h1>{{bss|length}}</h1></div>
+        <button style="width: 50%;" data-toggle="modal" data-target="#addbsModal" class="mx-auto btn btn-md aqua-gradient">Add Business</button>
     </div>
-    
   </div>
   <div class="row" style="padding-top: 5vh;">
     {%for bs in bss%}
@@ -40,12 +38,6 @@
       </div>
     </div>
     {%endfor%}
-  </div>
-  
-  <div class="row text-center">
-    <div class="col-6 mx-auto">
-      <button style="width: 50%;" data-toggle="modal" data-target="#addbsModal" class="btn btn-md aqua-gradient">Add Business</button>
-    </div>
   </div>
   
   <div class="modal fade" id="addbsModal" tabindex="-1" role="dialog" aria-labelledby="addbsLabel" aria-hidden="true">
