--- a/hood/templates/home.html
+++ b/hood/templates/home.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {% load static %}
 {%block content%}
-<div class="container">
+<div style="min-height: 100vh;" class="container">
   {%if request.user.profile.neighbourhood%}
   <h2>YOU HAVE A HOOD</h2>
   {%else%}
