--- a/hood/templates/hood_businesses.html
+++ b/hood/templates/hood_businesses.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{% static 'css/bs.css' %}">
 {%endblock%}
 {%block content%}
-<div class="container" style="padding-top: 5vh;">
+<div class="container" style="min-height:100vh;padding-top: 5vh;">
   <div class="mx-auto mb-3 col-md-6">
     <div class="card border-info mx-sm-1 p-3">
         <div class="card border-info shadow text-info p-3 my-card" ><i class="fas fa-briefcase"></i></div>
