--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,12 +4,14 @@ body{
   font-size: 16px;
   line-height: 1.8;
   font-weight: 400;
+  height:100%;
 }
 .hood-watch{
   position:relative;
+  background-image: url("../img/bg_1.jpg");
   background-position: 50% 0%;
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
 }
