--- a/static/css/services.css
+++ b/static/css/services.css
@@ -6,15 +6,15 @@
 }
 
 .services-section{
-  padding: 60px 0;
-  height: 90vh;
+  padding: 30px 0;
+  height: 100%;
 }
 .inner-width{
   width: 100%;
-  max-width: 1200px;
   margin: auto;
   padding: 0 20px;
   overflow: hidden;
+  height:100%
 }
 .section-title{
   text-align: center;
