--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -56,7 +56,7 @@
         <div class="dropdown-menu dropdown-menu-lg-right text-center dropdown-secondary"
           aria-labelledby="navbarDropdownMenuLink-55">
           <a class="dropdown-item" href="{%url 'my_profile'%}">Profile</a>
-          <a class="dropdown-item" href="">Edit Profile</a>
+          <a class="dropdown-item" href="{%url 'my_profile'%}">Edit Profile</a>
           <a class="dropdown-item" href="/logout">LOGOUT</a>
         </div>
       </li>
