--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -10,7 +10,7 @@
   width: 100%;
   color: #ffffff;
   text-align: center;
-  height:368px;
+  height:80vh;
   border:none;
 }
 .profile-card-1 .background {
