--- a/hood/templates/home.html
+++ b/hood/templates/home.html
@@ -1,9 +1,137 @@
 {%extends 'base.html'%}
 {% load static %}
+{%block styles%}
+{{block.super}}
+<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/fonts/simple-line-icons/style.min.css">
+<link rel="stylesheet" type="text/css" href="https://pixinvent.com/stack-responsive-bootstrap-4-admin-template/app-assets/css/colors.min.css">
+{%endblock%}
 {%block content%}
-<div style="min-height: 100vh;" class="container">
+<div  class="container text-center">
   {%if request.user.profile.neighbourhood%}
-  <h2>YOU HAVE A HOOD</h2>
+  <section id="minimal-statistics">
+    <div class="row">
+      <div class="col-12 mt-3 mb-1">
+        <h3><span class="badge badge-primary">{{request.user.profile.neighbourhood.hood_name|title}} Hood</span></h3>
+      </div>
+    </div>
+    <div class="row">
+     
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="primary">{{bss|length}}</h3>
+                  <span>Businesses</span>
+                </div>
+                <div class="align-self-center">
+                  <i class="icon-support primary font-large-2 float-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="align-self-center">
+                  <i class="icon-graph success font-large-2 float-left"></i>
+                </div>
+                <div class="media-body text-right">
+                  <h3>{{h_services|length}}</h3>
+                  <span>Hospitals</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+    </div>
+  
+    <div class="row">
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="danger">{{p_services|length}}</h3>
+                  <span>Fire Departments</span>
+                </div>
+                <div class="align-self-center">
+                  <i class="icon-rocket danger font-large-2 float-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+  
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="warning">{{p_services|length}}</h3>
+                  <span>Police Departments</span>
+                </div>
+                <div class="align-self-center">
+                  <i class="icon-pie-chart warning font-large-2 float-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="primary">{{posts|length}}</h3>
+                  <span>New Posts</span>
+                </div>
+                <div class="align-self-center">
+                  <i class="icon-book-open primary font-large-2 float-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+      <div class="col-xl-3 col-sm-6 col-12 my-1">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-body">
+              <div class="media d-flex">
+                <div class="media-body text-left">
+                  <h3 class="success">{{request.user.profile.neighbourhood.hood_occupants}}</h3>
+                  <span>Occupants</span>
+                </div>
+                <div class="align-self-center">
+                  <i class="icon-cup success font-large-2 float-right"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+     
+    </div>
+  </section>
+  
   {%else%}
   <div class="container  join-hood" style="margin-top:10%">
     <div class="row no-gutters slider-text justify-content-center align-items-center">
