--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 body{
   font-family: "Nunito Sans",Arial,sans-serif;
-  background: #fff;
+  background-color: #F5F7FA;
   font-size: 16px;
   line-height: 1.8;
   font-weight: 400;
@@ -14,4 +14,5 @@ body{
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
 }
