Create search business urlconf and view function

--- a/hood/templates/navbar.html
+++ b/hood/templates/navbar.html
@@ -12,9 +12,9 @@
   <div style="width: 100;" class="collapse navbar-collapse" id="navbarSupportedContent-555">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-      <form action="" class="form-inline mr-auto my-1">
+      <form action="{% url 'search_business' %}" class="form-inline mr-auto my-1">
         <div class="md-form form-sm my-0">
-          <input class="form-control form-control-sm mr-sm-2 mb-0" name="search" id="search" type="text" placeholder="Search"
+          <input class="form-control form-control-sm mr-sm-2 mb-0" name="bs_name" id="bs_name" type="text" placeholder="Search Business"
             aria-label="Search">
         </div>
       </form>
