--- a/users/templates/registration/registration_form.html
+++ b/users/templates/registration/registration_form.html
@@ -18,7 +18,7 @@
   </form>
 </section>
 <div id = "no_account">
-    <h4>Have an account?<a href="{% url 'home_page' %}"> Log in</a></h4>
+    <h4>Have an account?<a href="{% url 'user_login' %}"> Log in</a></h4>
 </div>
 
 
