--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -21,7 +21,16 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 body{
   background: #FAFAFA;
 }
-
+.auth{
+  position:relative;
+  background-image: url("../img/bg_1.jpg");
+  background-position: 50% 0%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+}
 #content{
   background: white;
   border:  solid #F5F5F5;
