--- a/users/templates/registration/base.html
+++ b/users/templates/registration/base.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="{%static 'favicon/instagram.png'%}" type="img/jpg">
+  <link rel="icon" href="{%static 'favicon/houses.png'%}" type="img/jpg">
 	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Tangerine">
   {% if title %}
   <title>Hood Watch - {{title}}</title>
