--- a/hood/templates/home.html
+++ b/hood/templates/home.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
      
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
@@ -54,7 +54,7 @@
     </div>
   
     <div class="row">
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
@@ -73,7 +73,7 @@
       </div>
      
   
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
@@ -93,7 +93,7 @@
     </div>
   
     <div class="row">
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
@@ -111,7 +111,7 @@
         </div>
       </div>
      
-      <div class="col-xl-3 col-sm-6 col-12 my-1">
+      <div class="col-lg-6 col-sm-6 col-12 my-1">
         <div class="card">
           <div class="card-content">
             <div class="card-body">
