--- a/users/templates/registration/login_form.html
+++ b/users/templates/registration/login_form.html
@@ -1,8 +1,14 @@
 {%extends "registration/base.html"%}
 {%block content%}
-<div style="margin-top: 2rem;width: 50vw;" class="card m-auto content">
+<div style="margin-top: 4rem;width: 50vw;" class="card mx-auto content">
+    <div class="text-center">
+        {% if form.errors %}
+        <p style="color: red;"> Some Information Might be Incorrect </p>
+        {% endif %}
+    </div>
     <div class="card-body">
         <form class="form-signin" method="POST">
+            <h2 style="font-weight: 600;" class="text-center">Hood watch</h2>
             {% csrf_token %}
             <label for="username" class="sr-only">Username</label>
             <input type="text" name="username" id="username" class="form-control mt-4" placeholder="Username" required autofocus>
@@ -13,7 +19,7 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-info btn-block" type="submit">Sign in</button>
+            <button class="btn btn-lg aqua-gradient-rgba btn-block" type="submit">Sign in</button>
         </form>
     </div>
 </div>
